--- a/MicroServices.Infra.IoC/MicroServices.Infra.IoC.csproj
+++ b/MicroServices.Infra.IoC/MicroServices.Infra.IoC.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MicroServices.Banking.Application\MicroServices.Banking.Application.csproj" />
+    <ProjectReference Include="..\MicroServices.Banking.Data\MicroServices.Banking.Data.csproj" />
     <ProjectReference Include="..\MicroServices.Domain.Core\MicroServices.Domain.Core.csproj" />
     <ProjectReference Include="..\MicroServices.Infra.Bus\MicroServices.Infra.Bus.csproj" />
   </ItemGroup>
